--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,19 +2,15 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: black;
   color: white;
   scroll-behavior: smooth;
 }
 
-:root {
-  --color-text: white;
-  --color-text-light: rgba(255, 255, 255, 0.8);
-  --color-text-lighter: rgba(255, 255, 255, 0.6);
-}
-
 body {
   font-family: "Inter", sans-serif;
+  background-color: black;
+  min-height: 100vh;
+  width: 100%;
 }
 
 .section-title {
@@ -23,84 +19,125 @@ body {
   margin-bottom: 20px;
 }
 
+/* NAV */
+
+.nav-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  padding: 1rem 10%;
+  z-index: 9999;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.nav-container::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: red;
+  background-color: rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(50px);
+  z-index: -1;
+}
+
+.navbar a {
+  font-size: 1.15rem;
+  color: white;
+  text-decoration: none;
+  font-weight: 400;
+  margin-left: 2.5rem;
+}
+
+#check {
+  display: none;
+}
+
+.icons {
+  font-size: 2.8rem;
+  right: 5%;
+  color: #fff;
+  cursor: pointer;
+  display: none;
+}
+
 /* HEADER */
 
 header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.jumbotron {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 20px;
-  min-height: 90vh;
-  width: 100%;
-  background: url(../images/background.jpg);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-}
-
-.jumbotron img {
-  width: 400px;
-  height: 400px;
-  border-radius: 50%;
-  margin-bottom: 40px;
-  filter: drop-shadow(0 0 10px white);
-}
-
-.jumbotron h1 {
-  background-color: transparent;
-  font-size: 50px;
-  font-weight: 700;
-  margin-bottom: 20px;
-  color: black;
-  text-shadow: 0 0 10px white;
-}
-
-.jumbotron p {
-  background-color: transparent;
-  font-size: 30px;
-  font-weight: 600;
-  color: black;
-  text-shadow: 0 0 10px white;
-}
-
-nav {
-  border-top: 1px solid white;
-  display: flex;
-  justify-content: center;
+  min-height: 100vh;
   width: 100%;
 }
 
-nav ul {
-  display: flex;
-  list-style: none;
-  padding: 20px;
-  width: 100%;
-  justify-content: space-evenly;
-}
-
-nav ul li {
-  padding: 20px;
-  font-size: 20px;
-  font-weight: 700;
-}
-
-nav ul li a {
-  display: block;
+.logo {
   text-decoration: none;
-  color: white;
+  font-size: 20px;
+  font-weight: 600;
+}
+
+/* HERO */
+
+.hero img {
+  width: 350px;
+  margin-bottom: 20px;
+  border-radius: 50%;
+  box-shadow: 0 0 10px 0 gray;
   transition: all 0.5s ease;
 }
 
-nav ul li a:hover {
-  text-shadow: 0 0 10px white;
+.hero img:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 20px 0 gray;
+}
+
+.hero {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  width: 100%;
+  background-image: url(../images/hero.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.hero h1 {
+  font-size: 40px;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+
+.hero p {
+  font-size: 20px;
+  font-weight: 400;
+  margin-bottom: 20px;
+}
+
+.hero button {
+  color: white;
+  padding: 10px 20px;
+  background-color: transparent;
+  backdrop-filter: blur(10px);
+  border: 1px solid white;
+  border-radius: 20px;
+  font-size: 20px;
+  font-weight: 700;
+  cursor: pointer;
+  transition: all 0.5s ease;
+}
+
+.hero button:hover {
+  background-color: white;
+  color: black;
+  box-shadow: 0 0 10px 0 white;
+  transform: scale(1.05);
 }
 
 /* ABOUT */
@@ -112,6 +149,12 @@ nav ul li a:hover {
   justify-content: center;
   min-height: 100vh;
   width: 100%;
+  background: url(../images/1.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  padding: 20px;
 }
 
 .about-container {
@@ -119,13 +162,11 @@ nav ul li a:hover {
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  min-height: 100vh;
   width: 100%;
 }
 
 .about-1 {
   flex: 1;
-  height: 100vh;
   width: 100%;
   display: flex;
   align-items: center;
@@ -149,7 +190,6 @@ nav ul li a:hover {
   flex: 1;
   text-align: center;
   padding: 20px;
-  height: 100vh;
   width: 100%;
   display: flex;
   align-items: flex-start;
@@ -163,7 +203,7 @@ nav ul li a:hover {
   align-items: center;
   justify-content: center;
   margin-bottom: 20px;
-  width: 70%;
+  width: 85%;
 }
 
 .about p {
@@ -198,6 +238,15 @@ nav ul li a:hover {
   padding-top: 110px;
   min-height: 100vh;
   width: 100%;
+  background: url(../images/2.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .services-title {
@@ -213,7 +262,7 @@ nav ul li a:hover {
 
 .services-container {
   display: flex;
-  gap: 40px;
+  gap: 20px;
   flex-wrap: wrap;
   justify-content: center;
 }
@@ -223,7 +272,7 @@ nav ul li a:hover {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 400px;
+  width: 350px;
   height: 450px;
   margin: 10px;
   border-radius: 20px;
@@ -260,31 +309,45 @@ nav ul li a:hover {
   margin-top: 10px;
 }
 
-.service-card-text {
-  margin-top: 10px;
-}
-
 .service-card-title h3 {
   margin: 0;
   font-size: 30px;
 }
 
-.service-box p {
+.box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+
+.service-card-text {
+  margin-top: 20px;
+  height: 100%;
+  width: 100%;
+  background-color: #dee2e6;
+  border-radius: 18px;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 18px;
+}
+
+.service-box p {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  font-size: 16px;
   font-weight: 500;
-  margin-top: 20px;
+  margin-top: 25px;
   text-align: left;
-  line-height: 1.5;
+  line-height: 1.4;
   padding: 0 20px;
-  background-color: #dee2e6;
-  border-radius: 20px;
   width: 100%;
-  height: 250px;
-  margin-bottom: 10px;
+  height: 230px;
   color: black;
+  background-color: transparent;
 }
 
 /* PROJECTS */
@@ -293,6 +356,15 @@ nav ul li a:hover {
   padding-top: 110px;
   min-height: 100vh;
   width: 100%;
+  background: url(../images/3.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .projects-title {
@@ -326,7 +398,7 @@ nav ul li a:hover {
 
 .projects-container {
   display: flex;
-  gap: 40px;
+  gap: 20px;
   flex-wrap: wrap;
   justify-content: center;
 }
@@ -337,8 +409,8 @@ nav ul li a:hover {
   align-items: center;
   margin: 10px;
   border-radius: 20px;
-  height: 580px;
-  width: 400px;
+  height: 410px;
+  width: 280px;
   box-shadow: 0 0 5px white;
   transition: all 0.5s ease;
 }
@@ -349,9 +421,8 @@ nav ul li a:hover {
 }
 
 .project-img {
-  width: 400px;
-  height: 50%;
-  overflow: hidden;
+  width: 100%;
+  height: 180px;
   border-radius: 20px;
   box-shadow: 0 0 5px white;
 }
@@ -362,4 +433,63 @@ nav ul li a:hover {
   object-fit: cover;
   overflow: hidden;
   border-radius: 20px;
+}
+
+/* Responsive Breakpoints */
+
+@media (max-width: 992px) {
+  .nav-container {
+    padding: 1.3rem 5%;
+  }
+}
+
+@media (max-width: 768px) {
+  .icons {
+    display: inline-flex;
+  }
+
+  #check:checked ~ .icons #menu-icon {
+    display: none;
+  }
+
+  .icons #close-icon {
+    display: none;
+  }
+
+  #check:checked ~ .icons #close-icon {
+    display: block;
+  }
+
+  .navbar {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    height: 0;
+    background: rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(50px);
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    transition: 0.5s ease;
+  }
+
+  #check:checked ~ .navbar {
+    height: 13rem;
+  }
+
+  .navbar a {
+    display: block;
+    font-size: 1.1rem;
+    margin: 1.5rem;
+    text-align: center;
+    transform: translateY(-50px);
+    opacity: 0;
+    transition: 0.5s ease;
+  }
+
+  #check:checked ~ .navbar a {
+    transform: translateY(0);
+    opacity: 1;
+    transition-delay: calc(0.15s * var(--i));
+  }
 }
