--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,6 +54,12 @@ body {
   text-decoration: none;
   font-weight: 400;
   margin-left: 2.5rem;
+  transition: all 0.3s ease;
+}
+
+.navbar a:hover {
+  color: white;
+  text-shadow: 3px 3px 20px cyan, -2px 1px 30px white;
 }
 
 #check {
@@ -804,4 +810,14 @@ a {
 .show.zoom-in-down {
   transform: scale(1);
   transform-origin: top;
+}
+
+.hidden.zoom-in-right {
+  transform: scale(0);
+  transform-origin: left;
+}
+
+.show.zoom-in-right {
+  transform: scale(1);
+  transform-origin: left;
 }
